--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,15 @@ _ReSharper*/
 packages/
 learning/microblog/venv/*
 venv/*
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+*.png
+*.png.gi
+*.png.xml
